# compose-rs

./: Cargo.toml  README.md
compose-rs/: Cargo.toml
compose-rs/src/: builder.rs  container.rs  error.rs  lib.rs  parser.rs
compose-rs/src/command/: down.rs  mod.rs  ps.rs  scale.rs  start.rs  stats.rs  up.rs
examples/: Cargo.toml  basic.rs  docker-compose.yml  scale.rs  stats.rs
