[package]
name = "compose-rs"
version = "0.0.2"
edition = "2021"
publish = true
license = "MIT"
description = "A Rust library to execute docker-compose commands and monitor compose stacks"
repository = "https://github.com/tomvoet/compose-rs"
readme = "../README.md"
keywords = ["docker", "compose", "monitoring", "container"]
categories = ["config", "parser-implementations", "virtualization"]
authors = ["Tom Voet <tomvoet@pm.me>"]
documentation = "https://docs.rs/compose-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-size = "1.0.0"
regex = "1.10.4"
relative-path = "1.9.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.58"
